--- a/master-deployment.yaml
+++ b/master-deployment.yaml
@@ -1,3 +1,16 @@
+apiVersion: v1
+kind: Service
+metadata: 
+  name: quest-backend-service
+spec: 
+  selector: 
+    app: quest-app
+  ports: 
+    - protocol: 'TCP'
+      port: 3000
+      targetPort: 3000
+  type: LoadBalancer
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:  # deployment object name 
